--- a/app.css
+++ b/app.css
@@ -5,7 +5,7 @@ html {
 }
 .container {
   margin: 0 auto;
-  max-width: 600px;
+  max-width: 100%;
   margin-top: 220px;
   color: rgb(12, 12, 12);
   }
@@ -27,6 +27,7 @@ html {
 .form #unit {
   font-size: 16px;
   height: 40px;
+  
 }
 
 .form #unit1 {
