--- a/app.css
+++ b/app.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Alfa+Slab+One|Fredoka+One|Orbitron&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro&display=swap");
+ 
+
 html {
-    background-color: rgb(228, 228, 197);
+  background-image: url("images/tape.jpg");
+  background-size: cover;
+  
 }
+
 .container {
   margin: 0 auto;
   max-width: 600px;
